# angstrom

./: '  .dockerignore  .gitignore  Cargo.toml  README.md  op-angstrom.Dockerfile  rust-toolchain.toml
crates/angstrom-net/: Cargo.toml
crates/angstrom-net/src/: builder.rs  cache.rs  eth_network_builder.rs  lib.rs  manager.rs  network.rs  network_handle.rs  pool_manager.rs  state.rs  swarm.rs
crates/angstrom-net/src/errors/: strom.rs
crates/angstrom-net/src/peers/: manager.rs  mod.rs  reputation.rs
crates/angstrom-net/src/session/: connection_handler.rs  mod.rs  session.rs  strom.rs
crates/angstrom-net/src/types/: message.rs  status.rs
crates/angstrom-net/tests/: message_propagation.rs  startup.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: core.rs  leader_selection.rs  lib.rs  manager.rs  round.rs  round_state.rs
crates/consensus/src/round/: mod.rs
crates/consensus/src/rounds/: bid_aggregation.rs  finalization.rs  mod.rs  pre_proposal.rs  pre_proposal_aggregation.rs  preproposal_wait_trigger.rs  proposal.rs
crates/flashblocks/: Cargo.toml
crates/flashblocks/src/: lib.rs  provider.rs  state.rs  subscriber.rs
crates/matching-engine/: Cargo.toml  lib.rs
crates/matching-engine/benches/: delta_tps.rs
crates/matching-engine/src/: lib.rs  manager.rs
crates/matching-engine/src/book/: mod.rs  sort.rs
crates/matching-engine/src/matcher/: delta.rs  volume.rs
crates/matching-engine/src/strategy/: binary_search.rs
crates/matching-engine/tests/: bundle.rs  matching.rs
crates/order-pool/: Cargo.toml
crates/order-pool/src/: error.rs  finalization_pool.rs  inner.rs  lib.rs  noop.rs  order_indexer.rs  order_sorter.rs  order_storage.rs  order_tracker.rs  traits.rs  upkeeper.rs  validator.rs
crates/order-pool/src/limit/: composable.rs  limit.rs  mod.rs  parked.rs  pending.rs  standard.rs
crates/order-pool/src/pool/: best.rs  events.rs  listener.rs  mod.rs  parked.rs  pending.rs  txpool.rs
crates/order-pool/src/searcher/: composable.rs  mod.rs  pending.rs  searcher.rs
crates/order-pool/src/test_utils/: mock.rs
crates/order-pool/src/validate/: eth.rs  mod.rs
crates/order-pool/tests/: indexing.rs  main.rs
crates/order-pool/tests/it/: listeners.rs
crates/rpc/: Cargo.toml
crates/rpc/consensus/: Cargo.toml
crates/rpc/consensus/src/: lib.rs  types.rs
crates/rpc/ipc/: README.md
crates/rpc/orders/: Cargo.toml
crates/rpc/orders/src/: types.rs
crates/rpc/quoting/: Cargo.toml
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-api/: Cargo.toml
crates/rpc/rpc-api/src/: consensus.rs  metrics.rs  orders.rs
crates/rpc/rpc-types/: Cargo.toml
crates/rpc/rpc-types/src/: lib.rs  metrics.rs
crates/rpc/src/: consensus.rs  lib.rs  metrics.rs  orders.rs  quoting.rs
crates/rpc/src/api/: consensus.rs  orders.rs  quoting.rs
crates/rpc/src/impls/: consensus.rs  orders.rs  quoting.rs
crates/rpc/src/types/: quoting.rs  subscriptions.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: lib.rs
crates/sequencer/src/op_stack/: submitter.rs
crates/sequencer/tests/: op_submitter.rs
crates/types/: Cargo.toml  build.rs
crates/types/bundle/: Cargo.toml
crates/types/bundle/src/: lib.rs  recovered_bundle.rs  rewards.rs
crates/types/consensus/: Cargo.toml
crates/types/consensus/src/: lib.rs  pre_prepose.rs  pre_propose_agg.rs  proposal.rs  slot_clock.rs  validator.rs
crates/types/constants/: Cargo.toml
crates/types/constants/src/: lib.rs
crates/types/contracts/: Cargo.toml  build.rs
crates/types/contracts/src/: lib.rs
crates/types/matching/: Cargo.toml
crates/types/matching/src/: composite.rs  debt.rs  lib.rs  ray.rs  sqrtprice.rs  tokens.rs
crates/types/orders/: Cargo.toml
crates/types/orders/src/: lib.rs  rpc_orders.rs  set.rs
crates/types/payloads/: Cargo.toml
crates/types/payloads/src/: lib.rs
crates/types/primitives/: Cargo.toml  build.rs
crates/types/primitives/src/: lib.rs  pool_state.rs  signer.rs  testnet.rs  validation.rs
crates/types/reth-db/: Cargo.toml
crates/types/reth-db/src/: lib.rs
crates/types/sol-bindings/: Cargo.toml
crates/types/sol-bindings/src/: grouped_orders.rs  lib.rs  rpc_orders.rs
crates/types/src/: donation_calc.rs  lib.rs  mev_boost.rs  network.rs  pair_with_price.rs  provider.rs  reth_db_provider.rs  reth_db_wrapper.rs  slot0.rs
crates/types/src/consensus/: mod.rs  order_buffer.rs  pre_prepose.rs  pre_propose_agg.rs  proposal.rs  round_data.rs
crates/types/src/contract_payloads/: angstrom.rs  mod.rs  rewards.rs  tob.rs
crates/types/src/flashblocks/: db_wrapper.rs  mod.rs  provider.rs
crates/types/src/matching/: composite.rs  debt.rs  match_estimate_response.rs  mod.rs  sqrtprice.rs  tokens.rs
crates/types/src/on_chain/: bundle.rs  mod.rs  order_types.rs
crates/types/src/orders/: mod.rs  origin.rs
crates/types/src/primitive/: blssignature.rs  chain_config.rs  chain_ext.rs  external_state_sim.rs  mod.rs  peers.rs  pool_state.rs  recovered_bundle.rs  signature.rs  signer.rs  state.rs
crates/types/src/sol_bindings/: envelopes.rs  mod.rs  ray.rs  rpc_orders.rs  sol.rs  testnet.rs  user_types.rs
crates/types/src/submission/: angstrom.rs  mempool.rs  mev_boost.rs  mod.rs
crates/types/src/testnet/: mod.rs
crates/types/src/traits/: bundles.rs  chain_ext.rs  mod.rs  rewards_update.rs  tob.rs  user_orders.rs
crates/types/src/uni_structure/: donation.rs  mod.rs  pool_swap.rs
crates/types/tests/: angstrom.rs  bundle.rs  math.rs
crates/uniswap-v4/: Cargo.toml
crates/uniswap-v4/src/: lib.rs
crates/uniswap-v4/src/uniswap/: pool.rs  pool_data_loader.rs  pool_factory.rs  pool_manager.rs  tob.rs
crates/validation/: Cargo.toml  state_config.toml  token_config.toml
crates/validation/benches/: tob_orders.rs  user_orders.rs
crates/validation/src/: lib.rs  validator.rs
crates/validation/src/bundle/: mod.rs  types.rs  validator.rs
crates/validation/src/common/: db.rs  lru_db.rs  mod.rs  revm.rs  slot_keeper.rs  state.rs  token_pricing.rs
crates/validation/src/order/: mod.rs  order_validator.rs
crates/validation/tests/: verification.rs
src/: guard.rs
(+458 files in other folders)
