[workspace]
members = [
  "bin/angstrom",
  "bin/testnet",
  "crates/angstrom-net",
  "crates/consensus",
  "crates/types",
  "crates/utils",
  "crates/validation",
  "crates/order-pool",
  "crates/rpc",
  "crates/eth/",
  "testing-tools",
  "testing-tools/testing-tools-macros",
  "crates/matching-engine",
  "crates/metrics",
  "crates/uniswap-v4",
]


#default-members = ["bin/angstrom"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SorellaLabs/angstrom"
repository = "https://github.com/SorellaLabs/angstrom"
exclude = [".github/"]


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 15

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false


[workspace.dependencies]
consensus = { path = "./crates/consensus/" }
angstrom-types = { path = "./crates/types/" }
uniswap-v4 = { path = "./crates/uniswap-v4/" }
angstrom-utils = { path = "./crates/utils/" }
validation = { path = "./crates/validation/" }
order-pool = { path = "./crates/order-pool/" }
angstrom-eth = { path = "./crates/eth/" }
angstrom-rpc = { path = "./crates/rpc/" }
angstrom-network = { path = "./crates/angstrom-net/" }
angstrom-metrics = { path = "./crates/metrics/" }
testing-tools = { path = "./testing-tools/" }
testing-tools-macros = { path = "./testing-tools/testing-tools-macros" }
angstrom = { path = "./bin/angstrom/" }
matching-engine = { path = "./crates/matching-engine/" }
eyre = "0.6.12"

# pade
pade = { git = "https://github.com/SorellaLabs/pade", version = "0.1.0" }
pade-macro = { git = "https://github.com/SorellaLabs/pade", version = "0.1.0" }

## async
async-trait = "0.1.68"
futures = "0.3.26"
futures-util = "0.3.29"

# revm
revm = { version = "14.0.3", features = [
  "std",
  "secp256k1",
], default-features = false }


# reth
reth = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-network = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }

# alloy
alloy = { version = "0.4.2", features = [
  "rlp",
  "full",
  "node-bindings",
  "rpc-types-debug",
  "rpc-types-trace",
  "json-rpc",
  "rpc-client",
  "signer-keystore",
  "signer-ledger",
  "signer-mnemonic",
  "signer-trezor",
  "signer-yubihsm",
  "sol-types",
  "contract",
] }
alloy-chains = "0.1.32"
alloy-primitives = "0.8.7"
alloy-sol-types = "0.8.0"
alloy-rlp = "0.3.4"
alloy-rpc-types = { version = "0.4.2", default-features = false, features = [
  "eth",
] }


# Uniswap math helpers
uniswap_v3_math = { git = "https://github.com/0xKitsune/uniswap-v3-math.git" }

hex-literal = "0.4.1"

## misc
bytes = "1.4"
bincode = "1.3.3"
tracing = "0.1.0"
tracing-subscriber = "0.3.18"
thiserror = "1.0"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
strum = "0.26.2"
itertools = "0.12.1"
parking_lot = "0.12"
metrics = "0.21.1"                                                           # Needed for `metrics-macro` to resolve the crate using `::metrics` notation
anyhow = "1.0.85"
url = "2.4.1"
auto_impl = "1.1.0"
k256 = { version = "0.13", default-features = false }

### proc-macros
proc-macro2 = "1.0"
quote = "1.0"

## tokio
tokio-stream = "0.1.11"
tokio = { version = "1.21", features = [
  "full",
  "tracing",
], default-features = false }
tokio-util = { version = "0.7.4", features = ["codec"] }


## json
jsonrpsee = "0.24"

## crypto
secp256k1 = { version = "0.29.0", default-features = false, features = [
  "global-context",
  "rand-std",
  "recovery",
] }
enr = { version = "=0.10.0", default-features = false, features = ["k256"] }


# misc-testing
tempfile = "3.8"
serial_test = "3.0.0"