[package]
name = "angstrom-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Ethereum network support
"""

[package.metadata.cargo-udeps.ignore]
normal = [
  # Used for diagrams in docs
  "aquamarine",
]

[lints.clippy]
large_enum_variant = "allow"
too_long_first_doc_paragraph = "allow"

[dependencies]
# reth
reth-primitives.workspace = true
reth-tasks.workspace = true
reth-provider.workspace = true
reth-eth-wire.workspace = true
reth-network.workspace = true
reth-network-peers.workspace = true

reth-network-p2p = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }
reth-net-banlist = { git = "https://github.com/paradigmxyz/reth", version = "1.1.0", tag = "v1.1.0" }

alloy.workspace = true
alloy-chains.workspace = true

bincode.workspace = true

angstrom-eth.workspace = true
angstrom-types.workspace = true
angstrom-utils.workspace = true
order-pool.workspace = true
validation.workspace = true

# async/futures
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true

# io
serde.workspace = true
humantime-serde = { version = "1.1", optional = true }
serde_json = { workspace = true, optional = true }

# metrics
reth-metrics.workspace = true

# misc
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
linked_hash_set = "0.1"
secp256k1.workspace = true

enr = { workspace = true, features = ["rust-secp256k1"], optional = true }
tempfile = { version = "3.3", optional = true }

[dev-dependencies]
testing-tools.workspace = true
angstrom-network.workspace = true
# reth
reth-primitives = { workspace = true, features = ["test-utils"] }

reth-network = { workspace = true, features = ["test-utils"] }
reth-metrics.workspace = true

reth-provider = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true

rand.workspace = true
secp256k1.workspace = true

# misc
serial_test.workspace = true
tempfile.workspace = true

[features]
default = ["serde"]
serde = [
  "dep:humantime-serde",
  "secp256k1/serde",
  "enr?/serde",
  "dep:serde_json",
]
test-utils = ["reth-provider/test-utils", "dep:enr", "dep:tempfile"]
geth-tests = []
test_harness = ["default"]
