[package]
name = "consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# angstrom
angstrom-metrics.workspace = true
uniswap-v4.workspace =true

tokio.workspace = true
futures.workspace = true
alloy.workspace = true
reth-metrics.workspace = true
reth-provider.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true

angstrom-types.workspace = true
angstrom-network.workspace = true
order-pool.workspace = true
matching-engine.workspace = true
tokio-stream.workspace = true
eyre.workspace = true
pade.workspace = true

[dev-dependencies]
testing-tools.workspace = true
