[package]
name = "flashblocks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy.workspace = true
alloy-evm = "0.20.1"
alloy-primitives = { workspace = true, default-features = false, features = ["map-foldhash"] }
brotli = "8.0.1"
eyre.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tracing.workspace = true
url.workspace = true

# Reth
reth.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", rev = "21ba9c4" }
reth-optimism-flashblocks = { git = "https://github.com/paradigmxyz/reth", rev = "21ba9c4" }
reth-optimism-primitives.workspace = true
reth-primitives-traits.workspace = true

# Angstrom
angstrom-types.workspace = true
