[package]
name = "matching-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[[bench]]
name = "volume_solver"
harness = false

[dependencies]
angstrom-types.workspace = true
validation.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
uniswap_v3_math.workspace = true
pade.workspace = true
rand.workspace = true
rand_distr.workspace = true
tokio.workspace = true
reth-tasks.workspace = true

# Using clap for our bookgen command-line tool
clap = "4.5.4"


[dev-dependencies]
pade.workspace = true
pade-macro.workspace = true
testing-tools.workspace = true
divan = "0.1.14"