[package]
name = "order-pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Order pool implementation
"""

[package.metadata.cargo-udeps.ignore]
normal = [
  # Used for diagrams in docs
  "aquamarine",
]

[dependencies]
# angstrom 
angstrom-types.workspace = true
angstrom-metrics.workspace = true
validation.workspace = true
angstrom-utils.workspace = true
eyre.workspace = true

# alloy
alloy.workspace = true

# async/futures
futures-util.workspace = true
tokio = { workspace = true, default-features = false, features = ["sync"] }
tokio-stream.workspace = true

# misc
thiserror.workspace = true
tracing.workspace = true

# testing

[dev-dependencies]

