[package]
name = "order-pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Order pool implementation
"""

[dependencies]
alloy.workspace = true
angstrom-metrics.workspace = true
angstrom-types.workspace = true
angstrom-utils.workspace = true
eyre.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "3.13.0"
telemetry-recorder.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false, features = ["sync"] }
tokio-stream.workspace = true
tracing.workspace = true
validation.workspace = true

[dev-dependencies]
testing-tools.workspace = true
# misc
tracing-subscriber.workspace = true
