[package]
name = "angstrom-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
angstrom-rpc-consensus.workspace = true
angstrom-rpc-orders.workspace = true
angstrom-rpc-quoting.workspace = true

[features]
default = ["client"]
client = ["angstrom-rpc-quoting/client", "angstrom-rpc-orders/client", "angstrom-rpc-consensus/client"]
