[package]
name = "angstrom-sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[features]
# Root feature for OP Stack-related functionality (submission and, in future, streams)
op-stack = ["dep:alloy-provider", "dep:alloy-transport-http", "dep:tokio"]
# Chain-specific flags build on top of the root OP Stack feature
op-stack-unichain = ["op-stack"]
op-stack-base = ["op-stack"]

default = []

[dependencies]
angstrom-types.workspace = true
url.workspace = true
alloy-provider = { workspace = true, optional = true }
alloy-transport-http = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
eyre.workspace = true
alloy-primitives.workspace = true
alloy-signer-local = { workspace = true, optional = true }
alloy = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
alloy = { workspace = true, features = ["signer-local"] }
alloy-signer-local = { workspace = true }
