[package]
name = "angstrom-types"
version.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
reth-network-peers = { workspace = true, features = ["secp256k1"] }
reth-provider.workspace = true
reth-trie.workspace = true
reth-chainspec.workspace = true
reth-storage-api.workspace = true
bytes = "1.4"
pade.workspace = true
pade-macro.workspace = true
tracing.workspace = true
thiserror.workspace = true
itertools.workspace = true
reth-primitives.workspace = true
revm.workspace = true
k256.workspace = true
malachite = "0.4.0"
alloy.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
bincode = { workspace = true }
serde = { workspace = true, optional = true, default-features = false, features = [
  "derive",
] }
uniswap_v3_math.workspace = true

testing-tools-macros = { workspace = true, optional = true }

rand = { version = "0.8.5", optional = true }
dashmap = "6.1.0"

[build-dependencies]
convert_case = "0.6.0"
itertools = "0.13.0"

[dev-dependencies]
rand.workspace = true

[features]
default = ["serde", "testnet"]
testnet = ["dep:rand", "dep:testing-tools-macros"]
serde = ["dep:serde"]
