[package]
name = "uniswap-v4"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true


[dependencies]
angstrom-types.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
uniswap_v3_math.workspace = true
itertools.workspace = true
malachite = "0.4.0"
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
reth-provider.workspace = true

arraydeque = "0.5"
once_cell = "1.20.2"

# Using clap for our bookgen command-line tool
[dev-dependencies]
