[package]
name = "validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
angstrom-utils.workspace = true
pade.workspace = true

angstrom-types.workspace = true
uniswap-v4.workspace = true

# revm
revm.workspace = true

# reth
reth-primitives = { workspace = true, features = ["std"] }

reth-provider.workspace = true
reth-revm.workspace = true

# async/futures
tokio.workspace = true
futures = "0.3.26"
futures-util.workspace = true
parking_lot = "0.12.1"

# misc
eyre = "0.6.8"

# error
thiserror = "1.0.34"

# serde
serde.workspace = true

# alloy
alloy.workspace = true
tracing.workspace = true
dashmap = "6.0.1"

[dev-dependencies]
testing-tools.workspace = true
reth-primitives = { workspace = true, features = ["test-utils"] }

reth-provider = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true

futures.workspace = true

# misc
serial_test.workspace = true

# features
[features]
default = ["testnet"]
reth-db-dep-tests = []
testnet = []
