[package]
name = "validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy.workspace = true
angstrom-metrics.workspace = true
angstrom-types.workspace = true
angstrom-utils.workspace = true
dashmap = { version = "6.0.1", features = ["serde"] }
eyre = "0.6.8"
futures = "0.3.26"
futures-util.workspace = true
pade.workspace = true
parking_lot = "0.12.1"
rand.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
revm.workspace = true
serde.workspace = true
serde_json.workspace = true
telemetry-recorder.workspace = true
tokio.workspace = true
tracing.workspace = true
uniswap-v4.workspace = true

[dev-dependencies]
futures.workspace = true
proptest.workspace = true
rand.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
revm-primitives.workspace = true
testing-tools.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
reth-db-dep-tests = []
