[package]
name = "angstrom-rpc-quoting"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
angstrom-amm-quoter.workspace = true
angstrom-network.workspace = true
angstrom-types.workspace = true
async-trait.workspace = true
consensus.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros", "ws-client"] }
order-pool.workspace = true
reth-tasks.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
validation.workspace = true

[dev-dependencies]
rand = "0"
tokio = { workspace = true, features = ["full", "tracing"] }

[features]
default = ["client"]
client = []
